2007-11-26 Jim Garlick <garlick@llnl.gov>

	* src/httppower.c : Beginning of httppower daemon.

2007-11-21 Jim Garlick <garlick@llnl.gov>

	* etc/apcpdu3.dev : New apc variant for new firmware [Trent D'Hooge]

2007-10-20 Jim Garlick <garlick@llnl.gov>

	* etc/ilom-inline.dev : Add support for Sun ILOM over system console.

	* man/powerman-devices.7 : Fix typo in cyclades section.

	* scripts/build : Remove, also rpm targets in Makefile.

	* : tag powerman-1.0.31

2007-10-05 Jim Garlick <garlick@llnl.gov>

	* powerman.spec : Add BuildRequries for bison.

	* src/parse.lex : Consider \r to be white space.

	* : tag powerman-1.0.30

2007-09-06 Albert Chu <chu11@llnl.gov>

	* etc/ipmipower.dev: Modify cycle/reset to use off and on.

	* man/powerman-devices.7: Adjust text appropriately for changes.
	
	* : tag powerman-1.0.29

2007-06-19 Jim Garlick <garlick@llnl.gov>

	* powerman.spec : Add flex to BuildRequires.

2007-06-13 Jim Garlick <garlick@llnl.gov>

	* scripts/build : Build .src.rpm and append %{?dist} to Release.

2007-05-07 Jim Garlick <garlick@llnl.gov>

	* etc/*.dev : Raise cycle and cycle_all delays from 2 sec to 4 sec
	to accomodate power supplies that take a while to bleed off.

	* : tag powerman-1.0.28

2007-04-24 Jim Garlick <garlick@llnl.gov>

	* Makefile : Added rpms-working, rpms-trunk, rpms-release, tagrel 
	targets.

	* ChangeLog : Unexpand tabs to unconfuse vim syntax coloring.

	* : tag powerman-1.0.27

2007-03-05 Jim Garlick <garlick@llnl.gov>

	* scripts/stonith-powerman : New for heartbeat package.

	* etc/powerman.spec : Install stonith-powerman into the location
	where heartbeat expects it.

	* scripts/build : Added copy of Chris's build script.

	* Makefile : Added testrpm target.

2007-01-07 Jim Garlick <garlick@llnl.gov>

	* etc/baytech-rpc28-nc.dev : Fix problem problem with plugs >= 10.

2006-12-28 Albert Chu <chu11@llnl.gov>

	* man/powerman-devices.7: Add information about ipmipower.
	
2006-12-21 Jim Garlick <garlick@llnl.gov>
